# funcpy

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/funcpy/: functions.py  list.py  maybe.py  monad.py  writer.py
tests/: test_monad.py
